<resources>
    <string name="app_name">Einkaufsliste</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="craeteactivity_label">Item erstellen</string>
    <string name="buttoncreate">Erstellen</string>
    <string name="textviewnumber">Anzahl</string>
    <string name="textvewcomment">Kommentar</string>
    <string name="edittextnumber">1</string>
    <string name="edittexttextpersonname2">1.5%</string>
    <string name="button_delete">Delete</string>
    <string name="search_label">Name</string>
    <string name="search_hint">Suche nach Namen</string>
    <string name="title_activity_search">SearchActivity</string>
</resources>